style: turning off "no-alert", "no-console" and "click-events-have-key-events" in .eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
         "react"
     ],
     "rules": {
+        "no-alert": "off",
+        "no-console": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
