--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.11.0",
@@ -53,7 +55,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "mocha": "^9.2.2"
   },
   "config": {
     "commitizen": {
