--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
     "env": {
         "browser": true,
         "es2021": true,
+        "jasmine": true,
+        "jest": true,
         "node": true
     },
     "extends": [
@@ -19,6 +21,7 @@
         "react"
     ],
     "rules": {
+        "no-return-assign": "off",
         "no-alert": "off",
         "no-console": "off",
         "jsx-a11y/click-events-have-key-events": "off",
